[package]
name = "burncloud-auto-update"
version = "0.1.2"
edition = "2021"
description = "Auto-update functionality for BurnCloud"
authors = ["BurnCloud Team"]
license = "MIT"
repository = "https://github.com/burncloud/burncloud-auto-update"
homepage = "https://burncloud.dev"
documentation = "https://docs.burncloud.dev"
keywords = ["auto-update", "self-update", "burncloud"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
log = "0.4"
self_update = { version = "0.42.0", features = ["archive-zip"] }
semver = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
env_logger = "0.10"